<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="40dip"
	style="@android:style/Theme.Material.Light.DarkActionBar"
	android:baselineAligned="false">

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="vertical"
		android:layout_weight="1">

		<TextView
			android:id="@+id/txt_connection_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:paddingBottom="25dip"
			android:textSize="24.5sp"
			android:textColor="@color/black"
			android:text="@string/tobegin"
			android:typeface="monospace"
			/>

		<Button
			android:id="@+id/btn_host"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="15dip"
			android:text="@string/discoverable"/>

		<Button
			android:id="@+id/btn_join"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="15dip"
			android:text="@string/entrance"/>

	</LinearLayout>

</LinearLayout>

