<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<View
		android:layout_height="140dp"
		android:layout_width="match_parent"
		android:layout_centerInParent="true"/>

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/edit_text"
		android:textIsSelectable="false"
		android:inputType="textCapCharacters"
		android:hint="@string/edit_text"
		android:focusableInTouchMode="true"
		android:maxLength="8"
		android:textColorHint="#779988"
		android:textAlignment="center"
		android:typeface="monospace"
		android:focusable="true"
		android:width="70dp"
		android:layout_centerHorizontal="true"
		android:height="70dp"
		android:layout_centerInParent="true"/>

	<Button
		android:layout_height="wrap_content"
		android:text="@string/_0"
		android:layout_width="wrap_content"
		android:id="@+id/btn0"
		android:layout_below="@id/edit_text"
		android:layout_centerHorizontal="true"/>

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="40sp"
		android:layout_height="40sp"
		android:src="@drawable/btn_send"
		android:layout_toRightOf="@id/edit_text"
		android:layout_above="@id/btn0"
		tools:ignore="ContentDescription" />

	<TextView
		android:id="@+id/TextView2"
		android:layout_height="50dp"
		android:layout_width="wrap_content"
		android:text="@string/hint"
		android:layout_above="@id/edit_text"
		android:layout_centerHorizontal="true"
		android:textColor="#C0C0C0"/>

</RelativeLayout>

